--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <!-- Self Style Sheet Links -->
-  <link rel="stylesheet" href="/css/index.css" />
+  <link rel="stylesheet" href="index.css" />
   <!-- Font Awesome-->
 
   <script src="https://kit.fontawesome.com/bea94cfaf8.js" crossorigin="anonymous"></script>
