removed extra files

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link navbar-text" href="#">rYde <sup>New</sup></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navbar-text" href="#">redRail <sup>New</sup></a>
+            <a class="nav-link navbar-text" href="rail.html">redRail <sup>New</sup></a>
           </li>
         </ul>
         <div class="navRight ms-auto">
