--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
   <!-- Self Style Sheet Links -->
-  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/bea94cfaf8.js" crossorigin="anonymous"></script>
-  <script src="/script.js"></script>
+  <script src="script/script.js"></script>
 </head>
 
 
