img height update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
       <div class="container-fluid">
-        <a class=" logo" href="#"><img src="https://i.postimg.cc/6QXFSC9R/red-Bus-Logo.png" alt="Brand Logo" /></a>
+        <a class=" logo" href="#"><img width="65px" src="https://i.postimg.cc/6QXFSC9R/red-Bus-Logo.png"
+            alt="Brand Logo" /></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -271,31 +272,31 @@
       <h3 class="mb-3">OUR GLOBAL PRESENCE</h3>
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs mb-4">
-          <img class="flag-img" src="https://i.postimg.cc/PJ1NqvXP/co.png" alt="">
+          <img class="flag-img" height="100px" src="https://i.postimg.cc/PJ1NqvXP/co.png" alt="">
           <p class="flag-text">Columbia</p>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" src="https://i.postimg.cc/xTycDmpZ/in.png"
-            alt="">
+        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" height="100px"
+            src="https://i.postimg.cc/xTycDmpZ/in.png" alt="">
           <p class="flag-text">India</p>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" src="https://i.postimg.cc/Qd8VXMRd/id.png"
-            alt="">
+        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" height="100px"
+            src="https://i.postimg.cc/Qd8VXMRd/id.png" alt="">
           <p class="flag-text">Indonesia</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" src="https://i.postimg.cc/X70pzLLF/my.png"
-            alt="">
+        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" height="100px"
+            src="https://i.postimg.cc/X70pzLLF/my.png" alt="">
           <p class="flag-text">Malaysia</p>
         </div>
 
-        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" src="https://i.postimg.cc/h4mXs6Lc/pe.png"
-            alt="">
+        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" height="100px"
+            src="https://i.postimg.cc/h4mXs6Lc/pe.png" alt="">
           <p class="flag-text">Peru</p>
         </div>
 
-        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" src="https://i.postimg.cc/3xtNWTTC/sg.png"
-            alt="">
+        <div class="col-md-4 col-sm-4 col-xs mb-4"> <img class="flag-img" height="100px"
+            src="https://i.postimg.cc/3xtNWTTC/sg.png" alt="">
           <p class="flag-text">Singapore</p>
         </div>
       </div>
