media query regarding cupon

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
 <body>
 
   <!-- Offer PopUp -->
-  <div id="coupon">
-    <button onclick="closeCoupon()">X</button>
+  <div id="coupon-container">
+    <div id="coupon">
+      <button onclick="closeCoupon()">X</button>
+    </div>
   </div>
 
   <div id="main">
@@ -304,7 +306,7 @@
   </div>
   <!-- Numbers  -->
   <div class=" container-fluid ">
-    <h3 class="text-center">THE NUMBERS ARE GROWING!</h3>
+    <h3 class="text-center number-heading">THE NUMBERS ARE GROWING!</h3>
     <div class="container">
       <div class="row">
         <div class="col-md-3  numbers">
