--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/dark.css">
 
-  <!-- Custom JavaScript file -->
-  <script src="script/script.js"></script>
+
 </head>
 
 <body>
@@ -47,8 +46,10 @@
       <button onclick="closeCoupon()">X</button>
     </div>
   </div>
+  <!-- redRail modal -->
 
 
+  </div>
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
     <div class="container-fluid">
@@ -69,11 +70,23 @@
             <a class="nav-link navbar-text" href="#">rYde <sup><strong>New</strong></sup></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navbar-text" href="rail.html">redRail <sup><strong>New</strong></sup></a>
+            <a class="nav-link navbar-text" href="#">redRail <sup><strong>New</strong></sup></a>
           </li>
           <li class="nav-item">
             <a class="nav-link navbar-text mode" onclick="changeMode()"></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link navbar-text weather" onClick="geolocation()"><i class="fa-solid fa-cloud"></i>
+
+            </a>
+
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar-text" id="weatherOut"></a>
+          </li>
+
+
+
         </ul>
         <div class="navRight ms-auto">
           <ul class="navbar-nav">
@@ -541,6 +554,8 @@
   <script>
     window.onload = loadCoupon();
   </script>
+  <!-- Custom JavaScript file -->
+  <script src="script/script.js"></script>
 </body>
 
 </html>
